fixed a problem where page shifts to the right

--- a/src/server/app/files/static/landing_page/css/style.css
+++ b/src/server/app/files/static/landing_page/css/style.css
@@ -11,6 +11,7 @@ body {
 
     overflow-x: hidden;
 
+
     font-family: 'Poppins', sans-serif;        cursor: default;
 }
 
@@ -569,6 +570,8 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    overflow-x: hidden;
+
 }
 
 .slideshow-item {
@@ -717,6 +720,8 @@ body {
     flex-direction: column;
 
     align-items: center;
+
+    position: relative;
 }
 
 #section-how-it-works > h1 {
@@ -724,7 +729,7 @@ body {
 }
 
 #how-it-works-slider {
-    width: 100vw;
+    width: 100%;
     height: 55vh;
 
     display: flex;
